# cado-nfs

./: .clang-format  .clang-tidy  .docker-script.sh  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  AUTHORS  CMakeLists.txt  Makefile  NEWS  README  README.Python  README.cl  README.dlp  README.md  README.msieve  amorce.mag  analyze-descent-step-data.cochon.txt  analyze-descent-step-data.magret.txt  analyze-descent-step-data.truffe.txt  analyze-descent-step.pl  cado-nfs-client.py  cado-nfs.py  cado-nfs.supp  cado.h  cado_config_h.in  cado_mpi_config_h.in  chart.tex  files.dist  files.nodist  helpers.bash  local.sh-ShiBai  local.sh.example  macros.h  merge.c  output_to_tikz_timechart.pl  portability.h  typecast.h
filter/: CMakeLists-nodist.txt  CMakeLists.txt  README.fileformat  clique_removal.cpp  clique_removal.h  clique_removal.hpp  compute_cols.c  debug-tools.sh  dup1.c  dup1.cpp  dup2.c  dup2.cpp  filter_badideals.c  filter_badideals.h  filter_config.h  filter_galois.c  filter_galois.cpp  markowitz.c  markowitz.h  medium_int.hpp  merge.c  merge.cpp  merge2.c  merge_bookkeeping.c  merge_bookkeeping.h  merge_compute_weights.c  merge_compute_weights.cpp  merge_compute_weights.h  merge_heap.c  merge_heap.h  merge_mono.c  merge_mpi.c  merge_replay_matrix.c  merge_replay_matrix.h  mst.c  mst.h  mymerge.cpp  purge.c  purge.cpp  purge_matrix.c  (+29 more)
gf2x/: .gitlab-ci.yml  .gitmodules  BUGS  Makefile.am  Makefile.in  NEWS  README  README.md  README.release  aclocal.m4  bench.c  check-gf2x-version.c  configure  configure.ac  gf2x.c  gf2x.h.in.in  gf2x.pc.in  rewrite-copyrights.sh  toom.c  toom128.c
linalg/: CMakeLists.txt  blockmatrix.c  blockmatrix.cpp  blockmatrix.h  blockmatrix.hpp  characters.c  characters.cpp  gauss.c  matops.cpp  matops.h  rowset_heap.cpp  rowset_heap.h  submatrix_range.hpp
misc/: CMakeLists-nodist.txt  CMakeLists.txt  cacheline.c  cachesim.c  check_rels.c  check_rels.cpp  cl_structure_from_group_order.cpp  convert_poly.c  convert_rels.c  convert_rels.cpp  debug_renumber.cpp  descent-init.c  descent_init_Fp.c  descent_init_Fp.cpp  explain_indexed_relation.cpp  extra_renumber.cpp  factor.cpp  factor.hpp  filter_sieved_pairs.c  indexed_relations_to_density.cpp  lingen_matprod_check.c  list_forbidden_cols_for_merge.c  phi.c  psi.c  rearrange_MNFS_matrix.c  renumber_convert.cpp  singleton_simple.c  smooth_detect.c  smooth_detect.cpp  smooth_detect.h  smooth_detect.hpp  split_renumbered_rels.c  svsm.c
polyselect/: CMakeLists-nodist.txt  CMakeLists.txt  E.sage  alpha.sage  area.c  area.cpp  area.h  area.hpp  auxiliary.c  auxiliary.cpp  auxiliary.h  auxiliary.hpp  best_polynomials_queue.cpp  best_polynomials_queue.h  best_polynomials_queue.hpp  dlpolyselect.c  dlpolyselect.cpp  gfpkdlpolyselect.c  gfpkdlpolyselect.cpp  gfpkdlpolyselect.h  gfpkdlpolyselect.hpp  gfpkdlpolyselect_impl.h  gfpkdlpolyselect_impl.hpp  gfpkdlpolyselect_test.c  integral.sage  murphyE.c  murphyE.cpp  murphyE.h  murphyE.hpp  polyselect.c  polyselect.cpp  polyselect2l.c  polyselect3.c  polyselect3.cpp  polyselect_alpha.c  polyselect_alpha.cpp  polyselect_alpha.h  polyselect_arith.c  polyselect_arith.cpp  polyselect_arith.h  (+137 more)
scripts/: CMakeLists.txt  build_environment.sh  call_cmake.sh  check_accidental_submodule_changes.sh  check_compilation_units_include_headers.sh  check_compilation_units_policy.pl  check_file_lists.pl  check_header_protections.sh  check_main_constness.sh  check_portability_h.sh  check_python_lint.sh  check_python_pathdetection_stub.sh  check_repo_policies.sh  cov.sh  descent.py  descent_helper_asyncio.py  displaycov.sh  dist.sh  estimate_matsize.sh  filter-ctest.pl  gcc-script.sh  gdb.py  hintfile-helper.py  install-cmake.sh  linalg.mag  list_modified_files.sh  mnfs_filter.sh  normalize-include-guards.sh  realpath.sh  refresh-fmtlib.sh  refresh-gf2x.sh  resubmit-tools.sh  rsa704.test  run-clang-tidy.py  scan-headers.py  setup-venv.sh  split.py
sieve/: CMakeLists.txt  README.descent  basicnt.h  bucket-push-update.hpp  bucket.c  bucket.cpp  bucket.hpp  display-lattice-adjust.sage  dupsup.cpp  fake_rels.cpp  fb-slice-weight.hpp  fb-types.h  fb-types.hpp  fb.c  fb.cpp  fb.hpp  freerel.c  freerel.cpp  inspect-batch-file.pl  inspect-fbc-file.pl  las-apply-buckets.hpp  las-arith.cpp  las-arith.h  las-arith.hpp  las-auxiliary-data.cpp  las-auxiliary-data.hpp  las-bkmult.cpp  las-bkmult.hpp  las-choose-sieve-area.cpp  las-choose-sieve-area.hpp  las-cofac-standalone.cpp  las-cofac-standalone.hpp  las-cofactor.cpp  las-cofactor.hpp  las-config.c  las-config.cpp  las-config.h  las-config.hpp  las-coordinates.cpp  las-coordinates.h  (+121 more)
sqrt/: CMakeLists-nodist.txt  CMakeLists.txt  abfiles.cpp  abfiles.hpp  checkdep.c  crtalgsqrt.c  crtalgsqrt.cpp  knapsack.c  knapsack.h  lift.c  mgmsqrt.cpp  montgomery.md  montgomery.sage  powers_of_p.cpp  powers_of_p.h  powers_of_p.hpp  sqrt.c  sqrt.cpp  sqrt_cachefiles.cpp  sqrt_cachefiles.hpp  sqrt_wq.cpp  sqrt_wq.hpp
tests/: .clang-tidy  CMakeLists.txt  README  cado_define_test.cmake  cado_divert_test.cmake  cado_test.cmake  do_n_times.sh  do_with_mpi.sh  generic_test_sha1_output.sh  guess_mpi_configs.sh  hwloc_cado_helper.c  omp_get_max_threads.c  pipe_to_sage.sh  predefined_primes.cmake  provide-wdir.sh  test.sh  test_gfp2_2_2g.sh  test_gfp3.sh  test_iceildiv.c  test_iter.c  test_iter.h  test_tests_common.c  tests_common.c  tests_common.h  wrap-test.sh
utils/: CMakeLists-nodist.txt  CMakeLists.txt  alloc_proxy.h  antebuffer.c  antilock.hpp  arithmetic_reductions.cpp  arithmetic_reductions.hpp  badideals.cpp  badideals.hpp  badideals_main.cpp  barrier.c  barrier.h  bit_vector.c  bit_vector.h  bucket_hash.hpp  cachebuf.h  cachesize.c  cachesize_cpuid.c  cachesize_cpuid.h  cachesize_guess.c  cachesize_guess.cpp  cado-endian.h  cado-sighandlers.cpp  cado-sighandlers.h  cado_addsubmul.hpp  cado_compile_time_hacks.hpp  cado_constants.hpp  cado_expression_parser.hpp  cado_math_aux.hpp  cado_mp_conversions.hpp  cado_parsing_base.hpp  cado_pipe_streambuf.cpp  cado_pipe_streambuf.hpp  cado_poly.c  cado_poly.cpp  cado_poly.h  cado_poly.hpp  cado_popen.c  (+260 more)
(+1708 files in other folders)
